Menambah logo Navigasi

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="" />
+          <img class="logo" src="/images/Solivagant-logo.png" />
         </div>
-        <!-- Tambahkan ikon menu disini -->
-        <span class="fa fa-bars menu-icon"></span>
+
         <div class="header-right">
           <a href="#">Home</a>
           <a href="#">Destination</a>
@@ -40,7 +39,10 @@
     </div>
 
     <footer>
-      <div class="container"></div>
+      <div class="container">
+        <img src="" />
+      </div>
+      <p>Copyright &copy; 2020. Tim C29. All Right Reserved.</p>
     </footer>
   </body>
 </html>
