--- a/index.html
+++ b/index.html
@@ -55,22 +55,23 @@
               <img src="https://4.bp.blogspot.com/-Cvsb4vyQdP4/Vb9ycbo_tWI/AAAAAAAADGw/aT0_1s2Hg7Q/s640/Surabaya_Tugu-Pahlawan.jpg">
               <p>Tugu Pahlawan</p>
             </div>
-            <p class="txt-contents">Monumen bersejarah yang berbentuk seperti paku terbalik di Surabaya yang menjadi bukti perjuangan dan keberanian rakyat Surabaya melawan penjajahan Belanda.</p>
+            <p class="text-contents">Monumen bersejarah yang berbentuk seperti paku terbalik di Surabaya yang menjadi bukti perjuangan dan keberanian rakyat Surabaya melawan penjajahan Belanda.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://i.misteraladin.com/blog/2019/07/12153314/air-terjun-kiti-kiti-2.jpg">
               <p>Air Terjun Kiti Kiti</p>
             </div>
-            <p class="txt-contents">Tempat wisata yang menampilkan Air Terjun yang langsung mengalir ke laut dilengkapi dengan keindahan bawah laut dengan terumbu karang dan beraneka tipe ikan di sekitar lokasi Air Terjun.</p>
+            <p class="text-contents">Tempat wisata yang menampilkan Air Terjun yang langsung mengalir ke laut dilengkapi dengan keindahan bawah laut dengan terumbu karang dan beraneka tipe ikan di sekitar lokasi Air Terjun.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://images.unsplash.com/photo-1582426007790-f5a2e2392dd3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1867&q=80">
               <p>Tana Toraja</p>
             </div>
-            <p class="txt-contents">Tempat wisata yang menawarkan keindahan budaya Indonesia dengan menampilkan keindahan arsitektur rumah adat traditional yang disebut dengan rumah tongkonan.</p>
+            <p class="text-contents">Tempat wisata yang menawarkan keindahan budaya Indonesia dengan menampilkan keindahan arsitektur rumah adat traditional yang disebut dengan rumah tongkonan.</p>
           </div>
+          <div class="clear"></div>
         </div>
       </div>
     </div>
