--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-left">
           <img class="logo" src="/images/Solivagant-logo.png" />
         </div>
-
+        <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
           <a href="#">Home</a>
           <a href="#">Destination</a>
