Merubah lesson dengan judul "Air Terjun Kitikiti"
perubahan pada foto, judul dan text-contents

--- a/index.html
+++ b/index.html
@@ -82,17 +82,10 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img
-                class="foto"
-                src="https://i.misteraladin.com/blog/2019/07/12153314/air-terjun-kiti-kiti-2.jpg"
-              />
-              <p class="judul">Air Terjun Kiti Kiti</p>
+              <img class="foto" src="Ubadari 960x540.jpg">
+              <p class="judul">Sungai Ubadari</p>
             </div>
-            <p class="text-contents">
-              Tempat wisata yang menampilkan Air Terjun yang langsung mengalir
-              ke laut dilengkapi dengan keindahan bawah laut dengan terumbu
-              karang dan beraneka tipe ikan di sekitar lokasi Air Terjun.
-            </p>
+            <p class="text-contents">Tempat wisata yang menampilkan sungai yang indah dengan air yang jernih, dingin, dan lingkungan  yang masih asri di Kampung Ubadari dengan perjalanan kurang dari 1 jam dari pusat kota Kabupaten Fakfak, Papua Barat.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
