--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img class="foto" src="/images/Ubadari 960x540.jpg">
+              <img class="foto" src="https://4.bp.blogspot.com/-eIhodsC_cRQ/WadUAh7KG6I/AAAAAAAAjXM/BDaett2HUPgZNIlpCetxP30AgSELslhGgCLcBGAs/s1600/ubadari%2B1.jpg">
               <p class="judul">Sungai Ubadari</p>
             </div>
             <p class="text-contents">Tempat wisata yang menampilkan sungai yang indah dengan air yang jernih, dingin, dan lingkungan  yang masih asri di Kampung Ubadari dengan perjalanan kurang dari 1 jam dari pusat kota Kabupaten Fakfak, Papua Barat.</p>
