--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOLIVAGANT - Melayani perjalanan wisata anda.</title>
-    <link rel="stylesheet" href="../css/stylesheet.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
 
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="images/Solivagant-logo.png" />
+          <img class="logo" src="./images/Solivagant-logo.png" />
         </div>
 
         <span class="fa fa-bars menu-icon"></span>
