--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOLIVAGANT - Melayani perjalanan wisata anda.</title>
-    <link rel="stylesheet" href="stylesheet.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
 
     <link
       rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    />
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="./images/Solivagant-logo.png" />
+          <img class="logo" src="./images/Solivagant-logo.png">
         </div>
 
         <span class="fa fa-bars menu-icon"></span>
@@ -75,8 +73,7 @@
             <div class="location-icon">
               <img
                 class="foto"
-                src="https://4.bp.blogspot.com/-Cvsb4vyQdP4/Vb9ycbo_tWI/AAAAAAAADGw/aT0_1s2Hg7Q/s640/Surabaya_Tugu-Pahlawan.jpg"
-              />
+                src="https://4.bp.blogspot.com/-Cvsb4vyQdP4/Vb9ycbo_tWI/AAAAAAAADGw/aT0_1s2Hg7Q/s640/Surabaya_Tugu-Pahlawan.jpg">
               <p class="judul">Tugu Pahlawan</p>
             </div>
             <p class="text-contents">
@@ -89,8 +86,7 @@
             <div class="location-icon">
               <img
                 class="foto"
-                src="https://i.misteraladin.com/blog/2019/07/12153314/air-terjun-kiti-kiti-2.jpg"
-              />
+                src="https://i.misteraladin.com/blog/2019/07/12153314/air-terjun-kiti-kiti-2.jpg">
               <p class="judul">Air Terjun Kiti Kiti</p>
             </div>
             <p class="text-contents">
@@ -103,8 +99,7 @@
             <div class="location-icon">
               <img
                 class="foto"
-                src="https://images.unsplash.com/photo-1582426007790-f5a2e2392dd3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1867&q=80"
-              />
+                src="https://images.unsplash.com/photo-1582426007790-f5a2e2392dd3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1867&q=80">
               <p class="judul">Tana Toraja</p>
             </div>
             <p class="text-contents">
