--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <img src="" />
       </div>
       <h4>Solivagant < _ ></h4>
-      <p>Copyright &copy; 2020. Tim C29. All Right Reserved.</p>
+      <p>Copyright &copy; 2020. Tim C29 - RCS II. All Right Reserved.</p>
     </footer>
   </body>
 </html>
