nambah nama Tim C29

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOLIVAGANT - Melayani perjalanan wisata anda.</title>
+    <title>Tim C29 Project - Solivagant - explore tempat terindah bersama kami.</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
 
