--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="container">
         <img src="" />
       </div>
-      <h4>Solivagant < _ ></h4>
+      <h4>Solivagant < '_' ></h4>
       <p>Copyright &copy; 2020. Tim C29 - RCS II. All Right Reserved.</p>
     </footer>
   </body>
